# ChangeLog for app-arch/tar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.63 2006/05/23 14:31:01 solar Exp $

  23 May 2006; <solar@gentoo.org> -tar-1.14.ebuild, -tar-1.15.1.ebuild:
  - removed obsolete vuln ebuilds

  28 Apr 2006; Joshua Kinard <kumba@gentoo.org> tar-1.15.1-r1.ebuild:
  Marked stable on mips.

  09 Mar 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  tar-1.15.1-r1.ebuild:
  ppc stable, bug #123038

  09 Mar 2006; Jose Luis Rivero <yoswink@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on alpha wrt sec bug #123038

  08 Mar 2006; Markus Rothe <corsair@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on ppc64; bug #123038

  08 Mar 2006; Mark Loeser <halcy0n@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on x86; bug #123038

  08 Mar 2006; Mike Doty <kingtaco@gentoo.org> tar-1.15.1-r1.ebuild:
  amd64 stable bug 123038

  08 Mar 2006; <plasmaroo@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on IA64; bug #123038.

  07 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on sparc wrt security #123038

  07 Mar 2006; Jeroen Roovers <jer@gentoo.org> tar-1.15.1-r1.ebuild:
  Stable on hppa (bug #123038).

*tar-1.15.1-r1 (07 Mar 2006)

  07 Mar 2006; <solar@gentoo.org> +files/tar-CVE-2006-0300.patch,
  +tar-1.15.1-r1.ebuild:
  - security bump. numerous bugs in xheader.c ; CVE-2006-0300 ; bug 123038

  12 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> tar-1.15.1.ebuild:
  Remove the charset.alias file (created on non-GNU systems, useless here).

  12 Aug 2005; Mike Frysinger <vapier@gentoo.org> tar-1.15.1.ebuild:
  Add support for renaming tar on non-GNU systems #96363.

  17 Jun 2005; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.15.1-lseek.patch, tar-1.15.1.ebuild:
  Add patch from upstream cvs / fedora.

  17 Jun 2005; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.15.1-less-verbose-newer.patch, tar-1.15.1.ebuild: