@@ -1,1 +1,3 @@
 MD5 57da3c38f8e06589699548a34d5a5d07 tar-1.15.1.tar.bz2 1611489
+RMD160 8de6b53b67294a942faec7638fb2cb2b4cccdac1 tar-1.15.1.tar.bz2 1611489
+SHA256 cc9a67d0bcdd6fd9f454893537799f98a4fd96e49e693e5b75b0604b9e3d2267 tar-1.15.1.tar.bz2 1611489
