@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/tar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.63 2006/05/23 14:31:01 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.64 2006/07/03 19:40:47 vapier Exp $
+
+*tar-1.15.91 (03 Jul 2006)
+
+  03 Jul 2006; Mike Frysinger <vapier@gentoo.org> +tar-1.15.91.ebuild:
+  Version bump #138979 by David Watzke.
 
   23 May 2006; <solar@gentoo.org> -tar-1.14.ebuild, -tar-1.15.1.ebuild:
   - removed obsolete vuln ebuilds
